openjdk23/jdk/test/langtools/tools/javac/generics/diamond/neg/Neg18.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

import java.util.Collections;
import pkg.Neg18_01;

class Neg18 {

   public static void meth() {
        new Neg18_01<>() {};
   }
}
